Fix miscellaneous bugs identified by FindBugs.